Fix Render CORS